--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "axios": "^1.7.2",
     "expo": "~51.0.14",
-    "expo-camera": "~15.0.11",
+    "expo-barcode-scanner": "~13.0.1",
+    "expo-camera": "~15.0.12",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
-    "react-native": "0.74.2",
-    "expo-barcode-scanner": "~13.0.1"
+    "react-native": "0.74.2"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0"
